--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,3 +1,15 @@
+<% content_for :page_title, "Homepage" %>
+
+<nav class="filters">
+  <%= link_to "All restaurants", root_path %>
+  <%= link_to "$", root_path(price: 1, cuisine: @cuisine) %>
+  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine) %>
+  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine) %>
+
+  <%= link_to "Fusion", root_path(cuisine: "Fusion", price: @price) %>
+  <%= link_to "English", root_path(cuisine: "English", price: @price) %>
+</nav>
+
 <% @reviews.each do |review| %>
   <div class="review">
     <%= link_to review.title, review_path(review) %>
