--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -28,8 +28,18 @@
 </p>
 
 <p>
+  <%= f.label :cuisine %>
+  <%= f.text_field :cuisine %>
+</p>
+
+<p>
+  <%= f.label :price %>
+  <%= f.number_field :price, within: 1..3 %>
+</p>
+
+<p>
   <%= f.label :score %>
-  <%= f.number_field :score %>
+  <%= f.number_field :score, within: 0..10 %>
 </p>
 
 <p>
