--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,12 +2,24 @@
 
 <nav class="filters">
   <%= link_to "All restaurants", root_path %>
-  <%= link_to "$", root_path(price: 1, cuisine: @cuisine) %>
-  <%= link_to "$$", root_path(price: 2, cuisine: @cuisine) %>
-  <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine) %>
 
-  <%= link_to "Fusion", root_path(cuisine: "Fusion", price: @price) %>
-  <%= link_to "English", root_path(cuisine: "English", price: @price) %>
+  <div>
+    <%= link_to "$", root_path(price: 1, cuisine: @cuisine, location: @location) %>
+    <%= link_to "$$", root_path(price: 2, cuisine: @cuisine, location: @location) %>
+    <%= link_to "$$$", root_path(price: 3, cuisine: @cuisine, location: @location) %>
+  </div>
+
+  <div>
+    <%= link_to "Fusion", root_path(cuisine: "Fusion", price: @price, location: @location) %>
+    <%= link_to "English", root_path(cuisine: "English", price: @price, location: @location) %>
+  </div>
+
+  <form action="/">
+    <input type="text" name="location" placeholder="Search location..." value="<%= @location %>">
+    <input type="hidden" name="price" value="<%= @price %>">
+    <input type="hidden" name="cuisine" value="<%= @cuisine %>">
+  </form>
+
 </nav>
 
 <% @reviews.each do |review| %>
