--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -28,6 +28,9 @@
 <% @reviews.each do |review| %>
   <div class="review">
     <%= link_to review_path(review) do %>
+
+      <%= image_tag review.photo.thumb.url %>
+
       <h2><%= review.title %></h2>
       <p>
         <%= review.cuisine %> -
