--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,7 @@
 <% content_for :page_title, @review.title %>
 
+<%= image_tag @review.photo.medium.url %>
+
 <h1><%= @review.title %></h1>
 <h2><%= @review.restaurant %></h2>
 
@@ -18,13 +20,9 @@
 
 <ul>
   <% @review.bookmarks.each do |bookmark| %>
-
   <li><%= bookmark.user.username %></li>
-  
   <% end %>
 </ul>
-
-
 
 <div class="score">
   <%= @review.score %> / 10
@@ -64,8 +62,10 @@
 
 <% if @review.user == @current_user %>
   <div class="actions">
-    <%= link_to "Edit this review", edit_review_path(@review) %>
-    <%= link_to "Delete this review", review_path(@review), method: :delete, data: { confirm: "Are you sure??"} %>
+    <% if @review.created_at > 1.hour.ago %>
+      <%= link_to "Edit this review", edit_review_path(@review) %>
+    <% end %>
+      <%= link_to "Delete this review", review_path(@review), method: :delete, data: { confirm: "Are you sure??"} %>
   </div>
 <% end %>
 
