--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,12 @@
       <nav>
 
         <% if is_logged_in? %>
-            <%= @current_user.email %>
+            <%= @current_user.username %>
+
+            <% if @current_user.is_admin? %>
+              <%= link_to "Admin", admin_root_path %>
+            <% end %>
+
             <%= link_to "Add a review", new_review_path %>
             <%= link_to "Log out", session_path, method: :delete %>
         <% else %>
@@ -38,7 +43,7 @@
     </main>
 
     <footer>
-      Copyright 2017 Bien Reviews
+      Copyright 2017 Bien Reviews - <%= link_to "About", about_path %> - <%= link_to "Terms", terms_path %>
     </footer>
   </body>
 </html>
